--- a/templates/malaonda.html
+++ b/templates/malaonda.html
@@ -100,7 +100,11 @@
       </div>
     </div>
   </div>
-
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <p class="credit-footer"><em>Mala Onda</em> was commissioned by Temporary Art Review for <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field Convening 2016 | Miami</a> from October 23-25, 2016. The project was embedded in an essay by theorist and curator Joshua Simon published on on <a href="http://temporaryartreview.com/" target="_blank">temporaryartreview.com</a> and on <a href="http://commonfield.org/projects" target="_blank">Common Field | Research</a> and was part of a broader segment on the impacts of accelerated capitalism.</p>
+    </div>
+  </div>
 </div>
 <!--END: MAIN CONTENT-->
 
