updated news, restructured nav, added future of work survey

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,21 +42,18 @@
   </div>
 
   <div id="card2" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
     <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
     <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
     <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
   </div>
 
   <div id="card3" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
     <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Lecture</small>
   </div>
 
   <div id="card4" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
     <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, testimonials</small>
@@ -97,13 +94,29 @@
     <a href="generators.html"><img class="img-responsive" src="img/database.jpg"></a>
   </div>
 
-  <div id="card10" class="card draggable news">
+  <div id="card10" class="card draggable center">
+    Store<br/><br/><br/>
+    <a href="store.html" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
+    <small></small>
+  </div>
+
+  <div id="card9" class="card draggable news">
     <img class="new" src="img/new.gif"/>
     <div class="center">News</div><br/>
     <small>
-      <strong>11.2016</strong> <em>Anxious to Make</em>, <a href="http://www.b4bel4b.com/" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
+      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam (forthcoming)
       <br/><br/>
-      <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/videomedeja-2016-en/screening-2016/liat-berdugo-emily-martinez-as-five-twins/?lang=en" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia (forthcoming)
+      <strong>11.2016</strong> <em>Side Gig</em>, <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA (forthcoming)
+      <br/><br/>
+      <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA (forthcoming)
+      <br/><br/>
+      <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="https://www.soex.org/projects-exhibitions/me-and-you-and-other-thing" target="_blank">Me and You and This Other Thing</a>, Southern Exposure, San Francisco, CA
+      <br/><br/>
+      <strong>10.2016</strong> <em>Making You</em>, <a href="http://v2.nl/the-gig-is-up-cloud-labour-night/view" target="_blank">Cloud Labour Night</a>, V2_ Institute for the Unstable Media, Rotterdam
+      <br/><br/>
+      <strong>10.2016</strong> <a href="malaonda.html"><em>Mala Onda</em></a> and <a href="dolphinaccelerator.html"><em>Dolphin Accelerator</em></a>, commissioned by Temporary Art Review, <a href="http://commonfield.org/convenings/2016" target="_blank">Common Field</a>, Miami, FL
+      <br/><br/>
+      <strong>10.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://videomedeja.org/videomedeja-2016-en/screening-2016/liat-berdugo-emily-martinez-as-five-twins/?lang=en" target="_blank">VIDEOMEDEJA</a>, Museum of Contemporary Art of Vojvodina, Novi Sad, Serbia
       <br/><br/>
       <strong>09.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, "The Institute for New Feeling / FELT BOOK" (screening), <a href="http://nyartbookfair.com/events/#The_classroom" target="_blank">Printed Matter's NY Art Book Fair</a>, MoMA PS1, Long Island City, NY
       <br/><br/>
@@ -125,13 +138,6 @@
       <br/><br/>
       <strong>11.2015</strong> interview, <a href="https://alwaysalreadypodcast.wordpress.com/2015/11/23/making-you/" target="_blank">"Epistemic Unruliness 4"</a>, Always Already Podcast 
     </small>    
-  </div>
-
-  <div id="card9" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
-    Store<br/><br/><br/>
-    <a href="store.html" target="_blank"><img class="img-responsive" src="img/store-pillow.jpg"></a><br/>
-    <small></small>
   </div>
 
   <!-- END: CARDS ROW 2 -->
