--- a/partials/_nav.html
+++ b/partials/_nav.html
@@ -12,6 +12,106 @@
   <p class="dnl-nav-title">Work</p>
   <ul class="dnl-nav">
     <li>
+      <a class="collapsed" data-toggle="collapse" href="#collapseCommissions" aria-expanded="false" aria-controls="collapseCommissions">
+        <span class="fa fa-file-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Commissions</span>
+        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
+      </a>
+      <!-- Dropdown level one -->
+      <ul class="dnl-sub-one collapse" id="collapseCommissions">
+        <li>
+          <a href="malaonda.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Mala Onda</span>
+          </a>
+        </li>
+        <li>
+          <a href="dolphinaccelerator.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Dolphin Accelerator</span>
+          </a>
+        </li>
+        <li>
+          <a href="openambiguity.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Open Ambiguity</span>
+          </a>
+        </li>
+        <li>
+          <a href="futureofwork.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">The Future of Work</span>
+          </a>
+        </li>
+        <li>
+          <a href="temporaryartreview.html">
+            <span class="fa fa-chrome dnl-link-icon"></span>
+            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
+          </a>
+        </li>
+        <li>
+          <a href="makingyoumakingothers.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Making You, Making Others</span>
+          </a>
+        </li>
+        <li>
+          <a href="twins.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
+          </a>
+        </li>
+        <li>
+          <a href="performativeremoval.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performative Removal of Creative Block</span>
+          </a>
+        </li>
+        <li>
+          <a href="nevertalkaboutyourworkagain.html">
+            <span class="fa fa-picture-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Human Billboard to Talk About Your Work</span>
+          </a>
+        </li>
+        <li>
+          <a href="unfamiliarmaterials.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
+          </a>
+        </li>
+        <li>
+          <a href="forecasting.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
+          </a>
+        </li>
+        <li>
+          <a href="externalizedistrust.html">
+            <span class="fa fa-video-camera dnl-link-icon"></span>
+            <span class="dnl-link-text">Performance to Externalize Distrust</span>
+          </a>
+        </li>
+        <li>
+          <a href="hypnosis.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Hypnosis to Engender Trust</span>
+          </a>
+        </li>
+        <li>
+          <a href="timemanagement.html">
+            <span class="fa fa-volume-down dnl-link-icon"></span>
+            <span class="dnl-link-text">Custom Audio Track for Motivation</span>
+          </a>
+        </li>
+        <li>
+          <a href="fucklabor.html">
+            <span class="fa fa-picture-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Fuck Labor. Write Scripts, Commission Animals</span>
+          </a>
+        </li>
+      </ul>
+    </li>
+    <li>
       <a class="collapsed" data-toggle="collapse" href="#collapseStatistics" aria-expanded="false" aria-controls="collapseStatistics">
         <span class="fa fa-database dnl-link-icon"></span>
         <span class="dnl-link-text">Generators</span>
@@ -70,94 +170,6 @@
       </ul>
     </li>
     <li>
-      <a class="collapsed" data-toggle="collapse" href="#collapseCommissions" aria-expanded="false" aria-controls="collapseCommissions">
-        <span class="fa fa-file-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Commissions</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseCommissions">
-        <li>
-          <a href="openambiguity.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Open Ambiguity: Keynote, Open Source &amp; Feelings 2016</span>
-          </a>
-        </li>
-        <li>
-          <a href="futureofwork.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">The Future of Work, Testimonials (Pt.1)</span>
-          </a>
-        </li>
-        <li>
-          <a href="temporaryartreview.html">
-            <span class="fa fa-chrome dnl-link-icon"></span>
-            <span class="dnl-link-text">They Paid Me to Give you a Tour of the Internet</span>
-          </a>
-        </li>
-        <li>
-          <a href="makingyoumakingothers.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Making You, Making Others</span>
-          </a>
-        </li>
-        <li>
-          <a href="twins.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Liat Berdugo &amp; Emily Martinez as 5 Twins</span>
-          </a>
-        </li>
-        <li>
-          <a href="performativeremoval.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Removal of Creative Block</span>
-          </a>
-        </li>
-        <li>
-          <a href="nevertalkaboutyourworkagain.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Human Billboard to Talk About Your Work</span>
-          </a>
-        </li>
-        <li>
-          <a href="unfamiliarmaterials.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performative Validation for Working with Unfamiliar Materials</span>
-          </a>
-        </li>
-        <li>
-          <a href="forecasting.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Psychic Reading to Future Proof Your Career</span>
-          </a>
-        </li>
-        <li>
-          <a href="externalizedistrust.html">
-            <span class="fa fa-video-camera dnl-link-icon"></span>
-            <span class="dnl-link-text">Performance to Externalize Distrust</span>
-          </a>
-        </li>
-        <li>
-          <a href="hypnosis.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Hypnosis to Engender Trust</span>
-          </a>
-        </li>
-        <li>
-          <a href="timemanagement.html">
-            <span class="fa fa-volume-down dnl-link-icon"></span>
-            <span class="dnl-link-text">Custom Audio Track for Motivation</span>
-          </a>
-        </li>
-        <li>
-          <a href="fucklabor.html">
-            <span class="fa fa-file-o dnl-link-icon"></span>
-            <span class="dnl-link-text">Fuck Labor. Write Scripts, Commission Animals</span>
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseDownloads" aria-expanded="false" aria-controls="collapseDownloads">
         <span class="fa fa-download dnl-link-icon"></span>
         <span class="dnl-link-text">Downloads</span>
@@ -188,7 +200,7 @@
     <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseQuizzes" aria-expanded="false" aria-controls="collapseQuizzes">
         <span class="fa fa-question dnl-link-icon"></span>
-        <span class="dnl-link-text">Quizzes &amp; Surveys</span>
+        <span class="dnl-link-text">Quizzes</span>
         <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
       </a>
       <!-- Dropdown level one -->
@@ -199,10 +211,27 @@
             <span class="dnl-link-text">Would Money Be All I Really Need to Succeed?</span>
           </a>
         </li>
+      </ul>
+    </li>
+    <p class="dnl-nav-title">Contribute</p>
+    <li>
+    <a class="collapsed" data-toggle="collapse" href="#collapseSurveys" aria-expanded="false" aria-controls="collapseQuizzes">
+        <span class="fa fa-comment-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Surveys</span>
+        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
+      </a>
+      <!-- Dropdown level one -->
+      <ul class="dnl-sub-one collapse" id="collapseSurveys">
         <li>
           <a href="makingyou.html">
-            <span class="fa fa-question dnl-link-icon"></span>
-            <span class="dnl-link-text">Important Research: <em>Making You</em> Survey</span>
+            <span class="fa fa-comment-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Important Research: <em>The Future of Work</em> Survey</span>
+          </a>
+        </li>
+        <li>
+          <a href="malaonda.html">
+            <span class="fa fa-comment-o dnl-link-icon"></span>
+            <span class="dnl-link-text">Important Research: <em>A Guide for Surviving Post-Capitalism's Black Magic Vortex</em> Survey</span>
           </a>
         </li>
       </ul>
@@ -211,12 +240,6 @@
       <a href="cse.html">
         <span class="fa fa-globe dnl-link-icon"></span>
         <span class="dnl-link-text">CSE</span>
-      </a>
-    </li>
-    <li>
-      <a href="sweepstakes.html">
-        <span class="fa fa-trophy dnl-link-icon"></span>
-        <span class="dnl-link-text">Sweepstakes</span>
       </a>
     </li>
     <li>
