--- a/css/sweepstakes.css
+++ b/css/sweepstakes.css
@@ -400,5 +400,8 @@ media queries
   .anxious-to-intervene{
     display: none;
   }
+  .dolphin-container [type="submit"] {
+    font-size: 24px;
+  }
 }
 
