added quitting, wwwork, updated news

--- a/templates/commissions.html
+++ b/templates/commissions.html
@@ -58,7 +58,7 @@
           </div>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="twins.html">
-            <img src="img/document.jpg" class="img-responsive" alt="Performance of Roles or Personas Outside of Comfort Zone"><span>Performance of Roles or Personas Outside of Comfort Zone</span></a>
+            <img src="img/document.jpg" class="img-responsive" alt="Performance of Roles or Personas Outside of Comfort Zone"><span>Liat Berdugo &amp; Emily Martinez as Five Twins</span></a>
           </div> 
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="performativeremoval.html">
