--- a/templates/index.html
+++ b/templates/index.html
@@ -44,15 +44,15 @@
   </div>
 
   <div id="card10" class="card draggable center">
-    <em>Dolphin Accelerator</em><br/><br/>
-    <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video</small>
-  </div>
-
-  <div id="card11" class="card draggable center">
     <em>Mala Onda</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Survey</small>
+  </div>
+
+  <div id="card11" class="card draggable center">
+    <em>Dolphin Accelerator</em><br/><br/>
+    <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>Video</small>
   </div>
 
   <div id="card12" class="card draggable center">
@@ -65,7 +65,7 @@
   <div id="card13" class="card draggable center">
     <img class="new" src="img/new.gif"/>
     <em>WWWORK</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/191615585?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video Essay</small>
   </div>
 
@@ -108,6 +108,8 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
+      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wrocenter.pl/en/wro2017/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland (forthcoming)
+      <br/><br/>
       <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
       <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF or ePub</a> from V2_ Institute for the Unstable Media, or as <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print-on-demand hardcopy</a> from Blurb.
