--- a/partials/_js.html
+++ b/partials/_js.html
@@ -3,3 +3,4 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
