--- a/templates/index.html
+++ b/templates/index.html
@@ -72,8 +72,10 @@
   <div id="card14" class="card draggable center futureofworkbook">
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work</em><br/><br/>
-    <a href="futureofworkbook.html"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
-    <small>Available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
+    <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
+    <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.
+
+    <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
   </div>
 
   <!-- END: CARDS ROW 1 -->
@@ -108,11 +110,11 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wrocenter.pl/en/wro2017/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland (forthcoming)
+      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wro2017.wrocenter.pl/en/contract-wideo/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland
       <br/><br/>
       <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
-      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF or ePub</a> from V2_ Institute for the Unstable Media, or as <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print-on-demand hardcopy</a> from Blurb.
+      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Institute for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
       <br/><br/>
       <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
       <br/><br/>
@@ -224,7 +226,7 @@
   </div> -->
 
 </div><!-- end container-->
-
+@@include('../partials/_sharing.html')
 <!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -233,6 +235,7 @@
 <script src="js/droppables.js" type="text/javascript"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/dash.js"></script>
+<script src="js/perfect-scrollbar.js"></script>
 
 </body>
 </html>
