--- a/templates/index.html
+++ b/templates/index.html
@@ -56,14 +56,12 @@
   </div>
 
   <div id="card12" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
     <em>Quitting</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
   <div id="card13" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
     <em>WWWORK</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video Essay</small>
@@ -73,9 +71,7 @@
     <img class="new" src="img/new.gif"/>
     <em>The Future of Work</em><br/><br/>
     <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
-    <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.
-
-    <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank">PDF, ePub</a> or in <a href="http://www.blurb.com/bookstore/invited/6774808/e6f9300afb806ab7d840c03454e3182d2cc6c658" target="_blank">print</a></small>
+    <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.</small>
   </div>
 
   <!-- END: CARDS ROW 1 -->
@@ -110,7 +106,11 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>2.2017</strong> <em>WWWWORK</em>, <a href="http://wro2017.wrocenter.pl/en/contract-wideo/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland
+      <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/" target="_blank">The Luminary</a>, St. Louis, MO<br/>Exhibition opening: Saturday, June 24, 6-8pm <span class="news6"/></span>
+      <br/><br/>
+      <strong>6.2017</strong> <em>Unthinking the Sharing Economy</em>, <a href="http://www.vencafstl.org/" target="_blank">Venture Cafe STL</a><br/>Designing thinking workshop: Thursday, June 22, 4-5pm <span class="news6"/></span>
+      <br/><br/>
+      <strong>5.2017</strong> <em>WWWWORK</em>, <a href="http://wro2017.wrocenter.pl/en/contract-wideo/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland
       <br/><br/>
       <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
@@ -153,80 +153,9 @@
       <strong>11.2015</strong> interview, <a href="https://alwaysalreadypodcast.wordpress.com/2015/11/23/making-you/" target="_blank">"Epistemic Unruliness 4"</a>, Always Already Podcast 
     </small>    
   </div>
-
-
-
-
-
   <!-- END: CARDS ROW 2 -->
-
-<!-- retired cards  
-
-  <div id="card10" class="card draggable center">
-    <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Lecture</small>
-  </div>
-
-  <div id="card14" class="card draggable center">
-    <em>Liat Berdugo + Emily Martinez<br/>as Five Twins</em><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158545?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card11" class="card draggable center">
-    <em>How to Make Yourself into a Commissioning Body<br/>in 5 Easy Steps</em><br/><br/><img class="img-responsive" src="img/us.jpg"><br/><small>performative lecture and workshop<br/><a href="http://2016.transmediale.de/content/how-to-turn-yourself-into-a-commissioning-body-in-five-easy-steps" target="_blank">transmediale / conversationpiece</a><br/><br/>download the <a href="http://anxioustomake.ga/media/HowToMakeYourselfIntoACommissioningBodyWorkbook.pdf" target="_blank">workbook</a> + <a href="http://anxioustomake.ga/media/scantron.pdf" target="_blank">scantron</a> </small>
-  </div>
-
-  <div id="card11" class="card draggable center">
-    <em>The Future of Work<br/>Testimonials</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/163223022?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, testimonials</small>
-  </div>  
-
-  <div id="card2" class="card draggable center">
-    <em>Confidence Generator</em><br/><br/><br/><br/>
-    <iframe src="https://player.vimeo.com/video/154158324?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
-    <small>Video, Commissioned Performance</small>
-  </div>
-
-  <div id="card3" class="card draggable center rituals">
-    <em>Rituals for Removing<br/>Creative Blocks</em><br/>
-    <a href="media/RitualsForRemovingCreativeBlocks.pdf"><img class="img-responsive" src="img/download-rituals.jpg"></a>
-  </div> 
-
-  <div id="card9" class="card draggable center sweepstakes">
-    <img class="new" src="img/new.gif"/>
-    Sweepstakes<br/><br/><br/><br/>
-    <a href="sweepstakes.html"><img class="img-responsive" src="img/sweepstakes-trophy2.gif"></a>
-    <br/><br/>
-    <small>Enter to Win!</small>
-  </div> 
-
-  <div id="card13" class="card draggable center">
-    <em>They Paid Me to Give<br/>You a Tour of the Internet</em><br/><br/>
-    <a href="temporaryartreview.html"><img class="img-responsive" src="img/tar.gif"></a><br/>
-    <small>Net Art Intervention, Commissioned by Temporary Art Review</small>
-  </div>
-
-  <div id="card17" class="card draggable center critical-texts">
-    Texts<br/><br/>
-    <small>critical art practice and the sharing economy<br/><br/>
-    mala onda: a guide for surviving the next five years (or the next 5 minutes) of accelerated change in post-capitalism's black magic vortex<br/><br/>
-    radical practices in the network economy<br/><br/>
-    tactics, movements, and forms of resistance for temporary, precarious laborers, knowledge workers, and cultural producers working today</small>
-  </div> 
-
-  <div id="card16" class="card draggable center internet-empire">
-    <em>How to Make Yourself an Internet Empire</em><br/><br/>a case study
-  </div>
-
-  <div id="card15" class="card draggable center labor">
-    <em>How to Make Yourself a Documentary about Labor Conditions in the Capital "A" Art World</em><br/><br/>a case study
-  </div> -->
-
 </div><!-- end container-->
-@@include('../partials/_sharing.html')
+
 <!-- Javascript -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
