updated luminary news link

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/" target="_blank">The Luminary</a>, St. Louis, MO<br/>Exhibition opening: Saturday, June 24, 6-8pm <span class="news6"/></span>
+      <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Exhibition opening: Saturday, June 24, 6-8pm <span class="news6"/></span>
       <br/><br/>
       <strong>6.2017</strong> <em>Unthinking the Sharing Economy</em>, <a href="http://www.vencafstl.org/" target="_blank">Venture Cafe STL</a><br/>Designing thinking workshop: Thursday, June 22, 4-5pm <span class="news6"/></span>
       <br/><br/>
