--- a/templates/generators.html
+++ b/templates/generators.html
@@ -57,6 +57,10 @@
           <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="importantthings.html">
             <img src="img/database.jpg" class="img-responsive" alt="Value Generator"><span>More Important Art<br/>Generator</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 database">
+            <a href="futuregenerator.html">
+            <img src="img/database.jpg" class="img-responsive" alt="Future Generator"><span>Future<br/>Generator</span></a>
           </div> 
           <!-- <div class="col-xs-6 col-sm-4 col-md-3 database">
             <a href="moneymakinggenerator.html">
