updated future generator

--- a/css/app.css
+++ b/css/app.css
@@ -695,7 +695,7 @@ body.cse {
   background-color: yellow;
   color:#FF0179;
   display: block;
-  margin: 50px auto;
+  margin: 50px auto 20px;
   font-family: sans-serif;
   font-size: 2em;
   font-weight: bold;
