--- a/css/app.css
+++ b/css/app.css
@@ -1060,6 +1060,38 @@ a#openPopUp:hover{
   width: 200px;
   padding:  20px 0;
 }
+
+/*=============================
+=       sharing buttons       =
+=============================*/
+
+.sharing-container {
+  width: 7%;
+  position: fixed;
+  opacity: 0.9;
+  bottom: 20%;
+  right: 0;
+  z-index: 999;
+}
+.sharing-container ul {
+    margin-left: 0px;
+    padding-left: 0px;
+}
+.sharing-container li {
+  background: rgba(255, 1, 121, 0.66);
+  margin-bottom: 3px;
+  list-style: none
+}
+.sharing-container li:hover{
+  background: rgba(255, 1, 121, 1.00);
+}
+.sharing-container svg {
+  fill: white;
+}
+.generator .sharing-container {
+  display: none;
+}
+
 /*=====================================
 =            media queries            =
 =====================================*/
@@ -1203,34 +1235,47 @@ a#openPopUp:hover{
   .commission .pageheading{font-size: 2.7em;}
 }   
 
+/*=====================================
+=            print queries            =
+=====================================*/
 
-/* 
-sharing buttons
-*/
+@media print {
+  * { background: transparent !important; 
+    color: black; 
+    text-shadow: none !important; 
+    filter:none !important; 
+    -ms-filter: none !important; 
+  }
+  body {
+    font-size:12pt;
+    line-height: 1.3;
+    font-family: Arial, sans-serif; 
+  }
+  a, a:visited { 
+    text-decoration: underline; 
+    word-wrap: break-word;
+  }
+  a[href^="http://"]:after, 
+  a[href^="https://"]:after {
+    content: " (" attr(href) ")";
+  }
+  a[href^="#"]:after { content: ""; }
+  span, p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3 { page-break-after: avoid; }
+  img { max-width: 100% }
+  @page { margin: 0.3cm; }
 
-.sharing-container {
-  width: 7%;
-  position: fixed;
-  opacity: 0.9;
-  bottom: 20%;
-  right: 0;
-  z-index: 999;
-}
-.sharing-container ul {
-    margin-left: 0px;
-    padding-left: 0px;
-}
-.sharing-container li {
-  background: rgba(255, 1, 121, 0.66);
-  margin-bottom: 3px;
-  list-style: none
-}
-.sharing-container li:hover{
-  background: rgba(255, 1, 121, 1.00);
-}
-.sharing-container svg {
-  fill: white;
-}
-.generator .sharing-container {
-  display: none;
+  .anxious-marquee, .generator .makefuture, .generator a, button.dnl-btn-toggle, #info {
+    display: none;
+  }
+  .generator-container {
+    margin-top: 2cm;
+  }
+  .future .scenario {
+    font-size: 12px;
+  }
+  .future .design {
+    font-size: 18px;
+    margin-top: 0;
+  }
 }
