--- a/partials/_retired.html
+++ b/partials/_retired.html
@@ -1,5 +1,10 @@
 <!-- retired cards  
 
+  <div id="card9" class="card draggable center cse">
+    Center for the Sharing Economy (CSE)<br/><br/>
+    <a href="cse.html"><img class="img-responsive" src="img/cse-ad-1.png"></a>
+  </div>
+  
   <div id="card10" class="card draggable center">
     <em>Open Ambiguity<br/>Keynote, OSF 2016</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/177629356?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
