--- a/templates/commissions.html
+++ b/templates/commissions.html
@@ -25,6 +25,10 @@
         <div class="row">
           <h1 class="title">Our Commissions</h1>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
+            <a href="afterwork.html">
+            <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>After Work | Four Futures</span></a>
+          </div>
+          <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="wwwork.html">
             <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>WWWORK</span></a>
           </div>
