--- a/templates/futuregenerator.html
+++ b/templates/futuregenerator.html
@@ -18,6 +18,7 @@
 <body class="generator">
 @@include('../partials/_contact.html')
 @@include('../partials/_about.html')
+@@include('../partials/_modal-afterwork.html')
 @@include('../partials/_nav.html')
 @@include('../partials/_header.html')
 
@@ -25,6 +26,14 @@
 <div class="generator-container">
 <div class="future"></div>
 <button class="makefuture">GENERATE A FUTURE</button>   
+</div>
+<div class="more-info-bottom-left"><a href="#afterwork-modal"><img src="img/info.gif"></a></div>
+<div id="love-me">
+  <marquee direction="down" width="100%" height="100%" behavior="alternate">
+    <marquee behavior="alternate">
+      <div><img src="img/dollar140px.gif" alt=""></div>
+    </marquee>
+  </marquee>
 </div>
 <!--END: MAIN CONTENT-->
 
