--- a/templates/index.html
+++ b/templates/index.html
@@ -38,33 +38,34 @@
 
   <!-- START: CARDS ROW 1 -->
 
-  <div id="card9" class="card draggable center cse">
-    Center for the Sharing Economy (CSE)<br/><br/>
-    <a href="cse.html"><img class="img-responsive" src="img/cse-ad-1.png"></a>
-  </div>
-
-  <div id="card10" class="card draggable center">
+  <div id="card9" class="card draggable center">
     <em>Mala Onda</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Survey</small>
   </div>
 
-  <div id="card11" class="card draggable center">
+  <div id="card10" class="card draggable center">
     <em>Dolphin Accelerator</em><br/><br/>
     <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video</small>
   </div>
 
-  <div id="card12" class="card draggable center">
+  <div id="card11" class="card draggable center">
     <em>Quitting</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card13" class="card draggable center">
+  <div id="card12" class="card draggable center">
     <em>WWWORK</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video Essay</small>
+  </div>
+
+  <div id="card13" class="card draggable center">
+    <em>After Work | Four Futures</em><br/><br/><br/><br/>
+    <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
+    <small>After watching, design <a href="futuregenerator.html"> the future</a>.</small>
   </div>
 
   <div id="card14" class="card draggable center futureofworkbook">
@@ -106,21 +107,21 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-      <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Exhibition opening: Saturday, June 24, 6-8pm <span class="news6"/></span>
+      <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
       <br/><br/>
-      <strong>6.2017</strong> <em>Unthinking the Sharing Economy</em>, <a href="http://www.vencafstl.org/" target="_blank">Venture Cafe STL</a><br/>Designing thinking workshop: Thursday, June 22, 4-5pm <span class="news6"/></span>
+      <strong>6.2017</strong> <em>Unthinking the Sharing Economy</em>, <a href="http://www.vencafstl.org/" target="_blank">Venture Cafe STL</a><br/>Designing thinking workshop: Thursday, June 22, 4-5pm
       <br/><br/>
       <strong>5.2017</strong> <em>WWWWORK</em>, <a href="http://wro2017.wrocenter.pl/en/contract-wideo/" target="_blank">“DRAFT SYSTEMS”, 17<sup>th</sup> Media Art Biennale WRO 2017</a>, WRO Art Center, Wroclaw, Poland
       <br/><br/>
       <strong>1.2017</strong> <em>Dolphin Accelerator</em>, <a href="http://www.petzel.com/exhibitions/2017-01-07_we-need-to-talk/" target="_blank">We Need To Talk</a>, Petzel Gallery, New York, NY
       <br/><br/>
-      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Institute for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
+      <strong>12.2016</strong> <em>The Future of Work (book)</em>. Now available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a> or <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a> from V2_ Lab for the Unstable Media, or as print-on-demand <a href="http://bit.ly/futureofwork-print" target="_blank">hardcopy</a> from Blurb
       <br/><br/>
       <strong>11.2016</strong> We have work here: <a href="http://temporaryartreview.com/announcing-to-make-a-public-book-launch-events/" target="_blank">To Make a Public: Temporary Art Review 2011-2016</a>. Buy a copy and support Temporary Art Review.
       <br/><br/>
-      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Institute for the Unstable Media, Rotterdam, NL
+      <strong>11.2016</strong> <a href="http://v2.nl/the-gig-is-up/" target="_blank">The Gig is Up</a>, V2_ Lab for the Unstable Media, Rotterdam, NL
       <br/><br/>
-      <strong>11.2016</strong> <em>Side Gig</em> (solo exhibition), <a href="http://www.b4bel4b.com/upcoming" target="_blank">B4BEL4B</a>, Oakland, CA
+      <strong>11.2016</strong> <em>Side Gig</em> (solo exhibition), <a href="https://www.b4bel4b.com/sidegig" target="_blank">B4BEL4B</a>, Oakland, CA
       <br/><br/>
       <strong>11.2016</strong> <em>Liat Berdugo &amp; Emily Martinez as 5 Twins</em>, <a href="http://realfuturefair.com/" target="_blank">Real Future Fair</a>, Oakland, CA
       <br/><br/>
