--- a/templates/temporaryartreview.html
+++ b/templates/temporaryartreview.html
@@ -18,12 +18,12 @@
 <body>
 @@include('../partials/_contact.html')
 @@include('../partials/_about.html')
-@@include('../partials/_tar.html')
+@@include('../partials/_modal-tar.html')
 @@include('../partials/_nav.html')
 @@include('../partials/_header.html')
 
 <!--START: MAIN CONTENT-->
-<div class="about-tar"><a href="#tar-modal"><img src="img/info.gif"></a></div>
+<div class="more-info-bottom-left"><a href="#tar-modal"><img src="img/info.gif"></a></div>
 <div class="main-content">
   <iframe src="https://s3.amazonaws.com/tarwalkon/index.html" style="border: 0; position:absolute; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
 </div>
