--- a/templates/futuregenerator.html
+++ b/templates/futuregenerator.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Liat Berdugo and Emily Martinez">
-    <meta name='description' content='404 error: You are lost.'>
+    <meta name='description' content='Design thinking ideation exercise for generating future worlds.'>
     <meta name='keywords' content=''>
     
 @@include('../partials/_social.html')
