updated index page

--- a/partials/_modal-afterwork.html
+++ b/partials/_modal-afterwork.html
@@ -6,7 +6,7 @@
       <h2><small>After Work | Four Futures</small></h2>
     </header>
     <article class="modal-text">
-      <p>Beofre you design the future, please watch:</p>
+      <p>Before you design the future, please watch:</p>
       <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="320" height="180" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </article>
   </div>        
