updated news and eternal

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,42 +38,49 @@
 
   <!-- START: CARDS ROW 1 -->
 
-  <div id="card9" class="card draggable center">
+<!--   <div id="card9" class="card draggable center">
     <em>Mala Onda</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/186196449?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Survey</small>
-  </div>
+  </div> -->
 
-  <div id="card10" class="card draggable center">
+  <div id="card9" class="card draggable center">
     <em>Dolphin Accelerator</em><br/><br/>
     <iframe src="https://player.vimeo.com/video/186337332?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video</small>
   </div>
 
-  <div id="card11" class="card draggable center">
+  <div id="card10" class="card draggable center">
     <em>Quitting</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/200595854?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video, Commissioned Performance</small>
   </div>
 
-  <div id="card12" class="card draggable center">
+  <div id="card11" class="card draggable center">
     <em>WWWORK</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/202841346?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Video Essay</small>
   </div>
 
-  <div id="card13" class="card draggable center futureofworkbook">
-    <img class="new" src="img/new.gif"/>
+  <div id="card12" class="card draggable center futureofworkbook">
     <em>The Future of Work</em><br/><br/>
     <a href="http://v2.nl/archive/articles/the-future-of-work" target="_blank"><img src="img/futureofworkbook.jpg" class="img-responsive" alt="The Future of Work book cover"></a><br/>
     <small>Available as <a href="http://bit.ly/futureofwork-pdf" target="_blank">PDF</a>, <a href="http://bit.ly/futureofwork-epub" target="_blank">ePub</a>, or in <a href="http://bit.ly/futureofwork-print" target="_blank">print</a>.</small>
   </div>
 
-  <div id="card14" class="card draggable center">
-    <img class="new" src="img/new.gif"/>
-    <em>After Work | Four Futures</em><br/><br/><br/><br/>
+  <div id="card13" class="card draggable center">
+    <!-- <img class="new" src="img/new.gif"/> -->
+    <em>After Work</em><br/><br/><br/><br/>
     <iframe src="https://player.vimeo.com/video/222723623?title=0&byline=0&portrait=0" width="275" height="155" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><br/><br/>
     <small>Design <a href="futuregenerator.html"> the future</a>.</small>
+  </div>
+
+    <div id="card14" class="card draggable center">
+    <img class="new" src="img/new.gif"/>
+    <em>Eternal Boy Playground</em><br/><br/><br/><br/>
+    <a href="https://tttelematiccc.com/" target="_blank"><img class="img-responsive" src="img/eternal.jpg"></a><br/>
+    <small>Solo Exhibition<br/><a href="https://tttelematiccc.com/" target="_blank">Telematic</a><br/>San Francisco, CA<br/>Dec 15 2018 - Feb 2 2019</small>
+
   </div>
 
 
@@ -110,11 +117,23 @@
   <div id="card6" class="card draggable news">
     <div class="center">News</div><br/>
     <small>
-    <strong>12.2017</strong> <em>Flat Rate Box</em>, modified/arts, Phoenix, AZ 
+    <strong>2.2019</strong> <em>Making You</em>, Entanglements, <a href="http://herenvironment.com/" target="_blank">Her Environment</a>, <a href="http://theyardsgallery.com" target="_blank">Yards Gallery</a>, Chicago, IL
      <br/><br/>
-    <strong>12.2017</strong> <em>What I Like About You</em>, Southern Exposure Gallery, San Francisco, CA 
+    <strong>2.2019</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="https://awmat2019.wordpress.com/" target="_blank">Alliance of Women in Media Arts and Technology</a>, University of California Santa Barbara
      <br/><br/>
-     <strong>12.2017</strong> <em>nervous.online</em>, Wrong Biennale 
+    <strong>12.2018</strong> <em>Eternal Boy Playground</em>, <a href="https://tttelematiccc.com/" target="_blank">Telematic</a>, San Francisco, CA<br/>Solo Exhibition, Dec 15 2018 - Feb 2 2019
+      <br/><br/>
+    <strong>11.2018</strong> <em>Making You</em>, <a href="https://northeastofnorth.com/event/artists-shorts-screening-programme/" target="_blank">Artists’ Shorts Screening Programme</a>, NEoN Digital Arts Festival, Dundee, Scotland
+     <br/><br/>
+    <strong>8.2018</strong> <em>Liat Berdugo + Emily Martinez as Five Twins</em>, <a href="http://artlitlab.org/events/off-the-wall-2018" target="_blank">Off the Wall</a>, Arts + Literature Laboratory, Madison, WI
+     <br/><br/>
+    <strong>12.2017</strong> <em>This Artwork is about the Sharing Economy</em>, <a href="http://modifiedarts.org/events-and-exhibitions/flat-rate-box/" target="_blank">Flat Rate Box</a>, modified/arts, Phoenix, AZ 
+     <br/><br/>
+    <strong>12.2017</strong> <em>Quitting</em>, <a href="https://www.soex.org/events/what-i-about-you" target="_blank">What I Like About You</a>, Southern Exposure Gallery, San Francisco, CA 
+     <br/><br/>
+     <strong>11.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://nervous.online/" target="_blank">nervous.online</a>, Wrong Biennale 
+     <br/><br/>
+     <strong>9.2017</strong> <em>How to Make Yourself into a Commissioning Body in Five Easy Steps</em>, <a href="http://networkcultures.org/entreprecariat/pervasive-labour-union-zine-11/" target="_blank">Pervasive Labour Union zine #11 – Special Issue: Entreprecariat!</a>, Institute of Network Cultures, Amsterdam, NL  
      <br/><br/>
       <strong>6.2017</strong> <em>Precarious Life 2.0</em>, <a href="http://theluminaryarts.com/exhibitions/anxious-to-make" target="_blank">The Luminary</a>, St. Louis, MO<br/>Solo Exhibition, June 24 - July 15th, 2017
       <br/><br/>
