--- a/partials/_nav.html
+++ b/partials/_nav.html
@@ -1,4 +1,4 @@
-<!-- START: NAVIGATION -->
+ START: NAVIGATION -->
 
 <!-- Dash Navbar Button -->
 <button class="dnl-btn-toggle">
@@ -223,29 +223,18 @@
     </li>
     <li>
     <a class="collapsed" data-toggle="collapse" href="#collapseQuizzes" aria-expanded="false" aria-controls="collapseQuizzes">
-        <span class="fa fa-question dnl-link-icon"></span>
-        <span class="dnl-link-text">Quizzes</span>
+        <span class="fa fa-comment-o dnl-link-icon"></span>
+        <span class="dnl-link-text">Quizzes + Surveys</span>
         <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
       </a>
       <!-- Dropdown level one -->
       <ul class="dnl-sub-one collapse" id="collapseQuizzes">
         <li>
           <a href="moneyquiz.html">
-            <span class="fa fa-question dnl-link-icon"></span>
+            <span class="fa fa-comment-o dnl-link-icon"></span>
             <span class="dnl-link-text">Would Money Be All I Really Need to Succeed?</span>
           </a>
         </li>
-      </ul>
-    </li>
-    <p class="dnl-nav-title">Contribute</p>
-    <li>
-    <a class="collapsed" data-toggle="collapse" href="#collapseSurveys" aria-expanded="false" aria-controls="collapseQuizzes">
-        <span class="fa fa-comment-o dnl-link-icon"></span>
-        <span class="dnl-link-text">Surveys</span>
-        <span class="fa fa-angle-up dnl-btn-sub-collapse"></span>
-      </a>
-      <!-- Dropdown level one -->
-      <ul class="dnl-sub-one collapse" id="collapseSurveys">
         <li>
           <a href="makingyou.html">
             <span class="fa fa-comment-o dnl-link-icon"></span>
@@ -260,18 +249,6 @@
         </li>
       </ul>
     </li>
-    <li>
-      <a href="cse.html">
-        <span class="fa fa-globe dnl-link-icon"></span>
-        <span class="dnl-link-text">CSE</span>
-      </a>
-    </li>
-    <li>
-      <a href="store.html">
-        <span class="fa fa-shopping-cart dnl-link-icon"></span>
-        <span class="dnl-link-text">Store</span>
-      </a>
-    </li> 
     <p class="dnl-nav-title">Info</p>
     <li>
       <a href="#contact-modal">
@@ -285,12 +262,25 @@
         <span class="dnl-link-text">About</span>
       </a>
     </li>
-    <li>
+<!--     <li>
       <a href="index.html">
         <span class="fa fa-home dnl-link-icon"></span>
         <span class="dnl-link-text">Home</span>
       </a>
-    </li>       
+    </li> -->
+    <p class="dnl-nav-title">Contribute</p>
+<!--     <li>
+      <a href="cse.html">
+        <span class="fa fa-globe dnl-link-icon"></span>
+        <span class="dnl-link-text">Center 4 The Sharing Economy</span>
+      </a>
+    </li> -->
+    <li>
+      <a href="store.html">
+        <span class="fa fa-shopping-cart dnl-link-icon"></span>
+        <span class="dnl-link-text">Store</span>
+      </a>
+    </li>        
   </ul>      
 </div><!-- /.dash-navbar-left -->
-<!--END: NAVIGATION-->
+<!--END: NAVIGATION
