--- a/templates/commissions.html
+++ b/templates/commissions.html
@@ -26,7 +26,7 @@
           <h1 class="title">Our Commissions</h1>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="afterwork.html">
-            <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>After Work | Four Futures</span></a>
+            <img src="img/document.jpg" class="img-responsive" alt="WWWORK"><span>After Work</span></a>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-3 document">
             <a href="wwwork.html">
